# Crystal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.md  build_vs2019_x64.cmd
benchmarks/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  common.h  debugvars.cpp  debugvars.h  environment.cpp  environment.h  log.cpp  log.h  sizes.h  thread.cpp  thread.h
gmm/: CMakeLists.txt  gmm.cpp  gmm.h
kmt/: CMakeLists.txt  dllmain.cpp  kmd_entrypoints.cpp  kmt_entrypoints.cpp  kmt_entrypoints.h  pch.cpp  pch.h
kmt/ddi/: CMakeLists.txt  kmd_ddi_render.cpp  kmd_ddi_resource.cpp  kmt_ddi_render.cpp  kmt_ddi_resource.cpp
kmt/dll/: CMakeLists.txt  dllmain.cpp  exports.def
kmt/objects/: kmd_allocation.cpp  kmd_allocation.h  kmd_context.cpp  kmd_device.cpp  kmd_display.cpp  kmd_display.h  kmd_handles.cpp  kmd_handles.h  kmd_privatedata.h  kmd_resource.h  kmt_adapter.cpp  kmt_adapter.h  kmt_allocation.cpp  kmt_allocation.h  kmt_context.cpp  kmt_context.h  kmt_device.cpp  kmt_device.h  kmt_display.cpp  kmt_display.h  kmt_handles.cpp  kmt_handles.h  kmt_privatedata.h  kmt_resource.cpp  kmt_resource.h
kmt/tests/: CMakeLists.txt  tests.cpp  tests.h
module/: CMakeLists.txt  debugvars.cpp  debugvars.h  display.cpp  display.h  dllcontext.cpp  dllcontext.h  dllmain.cpp  dllmain.h  entrypoints.cpp  entrypoints.h  exports.def  kmd_adapter.cpp  kmd_adapter.h  kmd_entrypoints.cpp  kmd_entrypoints.h  log.cpp  log.h  pch.cpp  pch.h  umd_adapter.cpp  umd_adapter.h  umd_caps.cpp  umd_caps.h  umd_ddi.cpp  umd_ddi.h  umd_ddi_check.cpp  umd_ddi_dynamic.cpp  umd_device.cpp  umd_device.h  umd_exports.cpp  umd_exports.h
module/cmds/: CMakeLists.txt  cmds.h  cmds_rop.h
module/gmm/: gmm.cpp  gmm.h
module/kmd/: CMakeLists.txt  display.cpp  display.h  kmd_adapter.cpp  kmd_adapter.h  kmd_allocation.cpp  kmd_allocation.h  kmd_context.cpp  kmd_context.h  kmd_device.cpp  kmd_device.h  kmd_entrypoints.cpp  kmd_entrypoints.h  kmd_handles.cpp  kmd_handles.h  kmd_privatedata.h  kmd_resource.cpp  kmd_resource.h  kmd_ring.cpp  kmd_ring.h
module/kmd/ddi/: kmd_ddi_render.cpp  kmd_ddi_resource.cpp
module/pch/: CMakeLists.txt  debugvars.cpp  debugvars.h  display.cpp  display.h  dllcontext.cpp  dllcontext.h  log.cpp  log.h  pch.cpp  pch.h
module/umd/: umd_adapter.cpp  umd_adapter.h  umd_allocation.cpp  umd_allocation.h  umd_caps.cpp  umd_caps.h  umd_cmdbuffer.cpp  umd_cmdbuffer.h  umd_device.cpp  umd_device.h  umd_encoder.cpp  umd_encoder.h  umd_exports.cpp  umd_exports.h  umd_resource.cpp  umd_resource.h
module/umd/ddi/: umd_ddi.cpp  umd_ddi.h  umd_ddi_blend.cpp  umd_ddi_calcprivate.cpp  umd_ddi_cbv.cpp  umd_ddi_clear.cpp  umd_ddi_commandlist.cpp  umd_ddi_convert.cpp  umd_ddi_copy.cpp  umd_ddi_counters.cpp  umd_ddi_deferredcontext.cpp  umd_ddi_depthstencil.cpp  umd_ddi_device.cpp  umd_ddi_dispatch.cpp  umd_ddi_draw.cpp  umd_ddi_dsv.cpp  umd_ddi_dxgi_blt.cpp  umd_ddi_dxgi_caps.cpp  umd_ddi_dxgi_present.cpp  umd_ddi_dxgi_resource.cpp  umd_ddi_dynamic.cpp  umd_ddi_input.cpp  umd_ddi_map.cpp  umd_ddi_query.cpp  umd_ddi_raster.cpp  umd_ddi_resource.cpp  umd_ddi_rtv.cpp  umd_ddi_samplers.cpp  umd_ddi_shader.cpp  umd_ddi_srv.cpp  umd_ddi_tr.cpp  umd_ddi_uav.cpp  umd_ddi_update.cpp  umd_ddi_viewports.cpp
module/umd/views/: umd_rtv.cpp  umd_rtv.h
raster/: CMakeLists.txt  Raster.h  entrypoints.cpp  entrypoints.h
raster/cmds/: cmds.h
raster/device/: CMakeLists.txt  raster_context.cpp  raster_context.h
raster/dll/: CMakeLists.txt  dllmain.cpp  dllmain.h  exports.def
raster/front-end/: CMakeLists.txt  cmd_parser.cpp  fe_parser.cpp  fe_parser.h  fe_ring.cpp  fe_ring.h
raster/pch/: CMakeLists.txt  debugvars.cpp  log.cpp  log.h  pch.cpp  pch.h
raster/tests/: CMakeLists.txt  tests.cpp  tests.h
samples/smoke/: CMakeLists.txt  Main.cpp
tests/: CMakeLists.txt  kmd.cpp  kmd.h  main.cpp
tools/d3dentrygen/: README.md  d3dentrygen.py  ddi.template  filemap.py  namegen.py  requirements.txt  template_ddi.cpp
tools/d3dentrygen/templates/: ddi.cpp.template  filltable.cpp.template  filltable.h.template
umd/: CMakeLists.txt  dllmain.cpp  pch.h  umd_caps.h  umd_cmdbuffer.cpp  umd_exports.cpp  umd_resource.cpp
umd/ddi/: CMakeLists.txt  umd_ddi.h  umd_ddi_blend.cpp  umd_ddi_calcprivate.cpp  umd_ddi_cbv.cpp  umd_ddi_clear.cpp  umd_ddi_commandlist.cpp  umd_ddi_convert.cpp  umd_ddi_device.cpp  umd_ddi_draw.cpp  umd_ddi_dxgi_present.cpp  umd_ddi_dynamic.cpp  umd_ddi_genmips.cpp  umd_ddi_input.cpp  umd_ddi_map.cpp  umd_ddi_raster.cpp  umd_ddi_resolve.cpp  umd_ddi_resource.cpp  umd_ddi_rtv.cpp  umd_ddi_samplers.cpp  umd_ddi_scissor.cpp  umd_ddi_shader.cpp  umd_ddi_streamout.cpp
umd/dll/: CMakeLists.txt  dllmain.cpp  dllmain.h  exports.def
umd/objects/: umd_cmdbuffer.cpp  umd_device.cpp  umd_device.h  umd_resource.cpp
umd/tests/: CMakeLists.txt  tests.cpp  tests.h
umd/views/: CMakeLists.txt  umd_rtv.h
